; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_event/extr_default_event_loop.c_esp_event_handler_register.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_event/extr_default_event_loop.c_esp_event_handler_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_default_loop = common dso_local global i32* null, align 8
@ESP_ERR_INVALID_STATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_event_handler_register(i32 %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %10 = load i32*, i32** @s_default_loop, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %4
  %13 = load i32, i32* @ESP_ERR_INVALID_STATE, align 4
  store i32 %13, i32* %5, align 4
  br label %21

14:                                               ; preds = %4
  %15 = load i32*, i32** @s_default_loop, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %8, align 4
  %19 = load i8*, i8** %9, align 8
  %20 = call i32 @esp_event_handler_register_with(i32* %15, i32 %16, i32 %17, i32 %18, i8* %19)
  store i32 %20, i32* %5, align 4
  br label %21

21:                                               ; preds = %14, %12
  %22 = load i32, i32* %5, align 4
  ret i32 %22
}

declare dso_local i32 @esp_event_handler_register_with(i32*, i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
